--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "trailingComma": "es5",
   "singleQuote": true,
   "bracketSpacing": true,
+  "arrowParens" : "always",
   "printWidth": 120,
   "overrides": [
     {
