--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -38,6 +38,7 @@ plugins:
   duplication:
     enabled: true
     config:
+      count_threshold: 3
       languages:
         - javascript
   eslint:
